--- a/src/stylesheets/MobileNav.module.css
+++ b/src/stylesheets/MobileNav.module.css
@@ -49,6 +49,10 @@ i
     opacity: 0.9;
     margin-top: 15%;
 }
+i:active
+{
+    color: red;
+}
 span
 {
     font-size:45px;
